--- a/pie-web/src/layouts/navbar.astro
+++ b/pie-web/src/layouts/navbar.astro
@@ -1,6 +1,11 @@
 ---
 ---
 
-<div>
-This is a test
-</ div>
+<header>
+    <nav class='flex'>
+        <ul class='flex'>
+            <li> asdklfjaskldfjlksjdf </li>
+            <li> asdklfjaskldfjlksjdf </li>
+        </ ul>
+    </nav>
+</ header>
