--- a/pie-web/src/layouts/navbar.astro
+++ b/pie-web/src/layouts/navbar.astro
@@ -1,11 +1,11 @@
 ---
 ---
 
-<header>
+<header class='p-5'>
     <nav class='flex'>
         <ul class='flex'>
             <li> asdklfjaskldfjlksjdf </li>
             <li> asdklfjaskldfjlksjdf </li>
-        </ ul>
+        </ul>
     </nav>
-</ header>
+</header>
