--- a/pie-web/src/pages/index.astro
+++ b/pie-web/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
-import Layout from "../layouts/default.astro";
+import Navbar from '../layouts/navbar.astro';
 ---
 
-<Layout title="Home Page">
-  <main class="min-h-full">
-	poo poo
-  </main>
-</Layout>
+<html>
+<body>
+    <Navbar />
+    <main>
+        <h1>Welcome to my site!</h1>
+    </main>
+</body>
+</html>
