--- a/pie-web/src/layouts/navbar.astro
+++ b/pie-web/src/layouts/navbar.astro
@@ -1,11 +1,11 @@
 ---
 ---
 
-<header class='p-5'>
-    <nav class='flex'>
-        <ul class='flex'>
-            <li> asdklfjaskldfjlksjdf </li>
-            <li> asdklfjaskldfjlksjdf </li>
+<header class="p-5 bg-black w-100">
+    <nav class="flex">
+        <ul class="flex space-x-4">
+            <li><a href="/" class="hover:text-blue-500">Home</a></li>
+            <li><a href="/about" class="hover:text-blue-500">About</a></li>
         </ul>
     </nav>
 </header>
