--- a/pie-web/src/pages/embla.css
+++ b/pie-web/src/pages/embla.css
@@ -18,18 +18,8 @@
   flex: 0 0 var(--slide-size);
   min-width: 0;
   padding-left: var(--slide-spacing);
-  border: 2px solid black
-}
-.embla__slide__number {
-  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-  border-radius: 1.8rem;
-  font-size: 4rem;
-  font-weight: 600;
+  border: 2px solid black;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: var(--slide-height);
-  user-select: none;
 }
 .embla__controls {
   display: grid;
