--- a/pie-web/src/pages/embla.css
+++ b/pie-web/src/pages/embla.css
@@ -1,38 +1,16 @@
 .embla {
   /* max-width: 48rem; */
   margin: auto;
-  --slide-height: 19rem;
-  --slide-spacing: 1rem;
+  /* --slide-height: 19rem; */
+  /* --slide-spacing: 1rem; */
   --slide-size: 100%;
 }
-.embla__viewport {
-  overflow: hidden;
-    background-color: white;
-}
-.embla__container {
-  display: flex;
-  touch-action: pan-y pinch-zoom;
-}
 .embla__slide {
-  transform: translate3d(0, 0, 0);
+  /* transform: translate3d(0, 0, 0); */
   flex: 0 0 var(--slide-size);
   min-width: 0;
   padding-left: var(--slide-spacing);
-  border: 2px solid black;
   display: flex;
-}
-.embla__controls {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  justify-content: space-between;
-  gap: 1.2rem;
-  margin-top: 1.8rem;
-}
-.embla__buttons {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 0.6rem;
-  align-items: center;
 }
 .embla__button {
   -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
@@ -50,12 +28,9 @@
   width: 3.6rem;
   height: 3.6rem;
   z-index: 1;
-  border-radius: 50%;
-  color: var(--text-body);
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: white;
 }
 .embla__button:disabled {
   color: var(--detail-high-contrast);
