--- a/pie-web/src/pages/embla.css
+++ b/pie-web/src/pages/embla.css
@@ -6,10 +6,10 @@
   --slide-size: 100%;
 }
 .embla__slide {
-  /* transform: translate3d(0, 0, 0); */
+  transform: translate3d(0, 0, 0); 
   flex: 0 0 var(--slide-size);
-  min-width: 0;
-  padding-left: var(--slide-spacing);
+  /* min-width: 0; */
+  /* padding-left: var(--slide-spacing); */
   display: flex;
 }
 .embla__button {
