--- a/pie-web/src/index.css
+++ b/pie-web/src/index.css
@@ -162,7 +162,10 @@
 
 .react-markdown code {
   font-size: clamp(0.7rem, 0.80vw, 2.25rem);
-  padding-block: 0.5rem;
+  padding-block: 0.50rem;
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: break-all;
 }
 
 .react-markdown blockquote {
@@ -173,21 +176,24 @@
 }
 
 .react-markdown table {
-  width: 100%;
+  font-size: clamp(0.7rem, 0.95vw, 2.25rem);
   border-collapse: collapse;
   margin: 1rem 0;
+  overflow-x: auto;
+  display: block;
+  width: 100%;
 }
 
 .react-markdown th {
   background-color: #F3C45E; /* bg-gray-100 */
   text-align: left;
   font-weight: 600;
-  padding: 0.5rem 1rem;
+  padding: 2vw;
   border: 2px solid #F3C45E; /* border-gray-200 */
 }
 
 .react-markdown td {
-  padding: 0.5rem 1rem;
+  padding:2vw;
   border:2px solid #F3C45E;
 }
 
@@ -225,4 +231,5 @@
   -webkit-line-clamp: 10; /* Show max 3 lines */
   -webkit-box-orient: vertical;
   overflow: hidden;
+  max-width: 75vw;
 }
